--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -11,7 +11,7 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-        <script src="%sveltekit.assets%/js/particles.js"></script>
-        <script src="%sveltekit.assets%/js/setting.js"></script>
+        <!--<script src="%sveltekit.assets%/js/particles.js"></script>
+        <script src="%sveltekit.assets%/js/setting.js"></script>-->
 	</body>
 </html>
