Feature/add layout (#8)

--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background: RGBA(0, 58, 97, 1);">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
+        <title>Prompt Tree</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+        <!--<script src="%sveltekit.assets%/js/particles.js"></script>
+        <script src="%sveltekit.assets%/js/setting.js"></script>-->
 	</body>
 </html>
