--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" style="background: RGBA(0, 58, 97, 1);">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/images/icon.png" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
         <title>Prompt Tree</title>
