--- a/packages/app/src/app.html
+++ b/packages/app/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/images/icon.png" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
-        <title>Prompt Tree</title>
+        <title>Prompt NFT Tree</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
